--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -33,7 +33,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --color-primary: #6896da; /* blue-800 */
+  --color-primary: #fff4ef; /* blue-800 */
   --color-secondary: #d20a2e;
   --color-background: #fff4ef;
   --color-surface: #ffffff; /* white */
@@ -46,6 +46,10 @@
 html,
 body {
   font-family: var(--font-body);
+}
+
+.text-secondary {
+  color: var(--color-secondary);
 }
 
 /* Make headings use the heading font */
